--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 server.port=8080
+
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost/ventas
+spring.datasource.username=postgres
+spring.datasource.password=root
